[package]
name = "kitsune2-mem-opstore"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = "0.3"
tokio = "1.41.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


kitsune2 = "0.3.0-dev.1"
kitsune2_api = "0.3.0-dev.1"
kitsune2_core = "0.3.0-dev.1"
kitsune2_gossip = "0.3.0-dev.1"
kitsune2_transport_tx5 = "0.3.0-dev.1"
